<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context = ".RegisterActivity"
    android:layout_centerVertical="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarSize="10dp"
    android:scrollbarStyle="insideInset">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_gravity="center"
        android:paddingTop="100dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_margin="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="100dp"
                android:elevation="10dp"
                android:padding="20dp"
                android:layout_gravity="start"
                android:layout_marginStart="20dp">
                <ImageView
                    android:id="@+id/registerImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/profilimg"
                    android:focusable="true"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/avatars"
                    />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fotoyukle"
                    android:id="@+id/yukle">
                </Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fotoCek"
                    android:id="@+id/fotocek">
                </Button>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_isim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_soyisim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/bolum"
                android:id="@+id/register_bolum"
                android:textSize="20sp"
                android:textColor="@color/common_google_signin_btn_text_light_default">
            </TextView>
            <Spinner
                android:id="@+id/bolumSpinner"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:contentDescription="@string/bolum"
                android:spinnerMode="dropdown"
                android:entries="@array/Bolumler"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/mezuniyet"
                android:id="@+id/register_mezuniyet"
                android:textSize="20sp"
                android:textColor="@color/common_google_signin_btn_text_light_default">
            </TextView>
            <Spinner
                android:id="@+id/mezuniyetSpinner"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:contentDescription="@string/mezuniyet_derecesi_register"
                android:spinnerMode="dropdown"
                android:entries="@array/MezuniyetDerecesi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/regDurum"
                android:id="@+id/register_durum"
                android:textSize="20sp"
                android:textColor="@color/common_google_signin_btn_text_light_default">
            </TextView>
            <Spinner
                android:id="@+id/durumSpinner"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:contentDescription="@string/mezuniyet_derecesi_register"
                android:spinnerMode="dropdown"
                android:entries="@array/ilan_tur_listesi"/>
        </LinearLayout><com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_mesafe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regMesafe"
                android:textColorHint="#546E7A"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_Sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regSure"
                android:textColorHint="#546E7A"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_KisiSayisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regKisiSayisi"
                android:textColorHint="#546E7A"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_girisYili"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/startDate"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_mezunYili"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/finishDate"
                android:textColorHint="#546E7A"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_telefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_telefon"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColorHint="#546E7A"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:textColor="@color/common_google_signin_btn_text_light_default"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/register_btn"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp" />
    </LinearLayout>
</ScrollView>