<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserInfoActivity">
    <LinearLayout
        android:padding="5sp"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="start">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="80dp"
            android:elevation="10dp"
            android:padding="20dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/infoProfileImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profilimg"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="10dp">
                <TextView
                    android:id="@+id/infoProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="1dp"
                    android:paddingEnd="5dp"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black">
                </TextView>
                <TextView
                    android:id="@+id/infoProfileLastname"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lastName"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="start">
                <TextView
                    android:id="@+id/infobolum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mezuniyet"
                    android:textSize="20sp"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_gravity="start"
                    android:gravity="end">
                </TextView>
                <TextView
                    android:id="@+id/infoProfileMezuniyet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:gravity="end"
                    android:textColor="@color/common_google_signin_btn_text_light"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_gravity="start"
                android:gravity="start">
                <TextView
                    android:id="@+id/infomezuniyet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bolum"
                    android:textSize="20sp"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_gravity="start"
                    android:gravity="end">
                </TextView>
                <TextView
                    android:id="@+id/infoProfileBolum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="18sp"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textColor="@color/common_google_signin_btn_text_light"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:id="@+id/infoProfilGirisYili"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/giris_yili"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="end">
                </TextView>
                <TextView
                    android:id="@+id/and"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/tire"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:layout_gravity="center">
                </TextView>
                <TextView
                    android:id="@+id/infoProfileMezunYili"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mezun_yili"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="start" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:gravity="end"
        android:padding="15sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="İlan Bilgileri:"
                android:textSize="23sp"
                android:textColor="@color/black">
            </TextView>
            <LinearLayout
                android:paddingTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regDurum"
                    android:textSize="20sp"
                    android:textColor="@color/dark_slate_gray">
                </TextView>
                <TextView
                    android:id="@+id/infoProfilDurum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/regDurum">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/infoProfilMesafeYazi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regMesafe"
                    android:textSize="20sp"
                    android:textColor="@color/dark_slate_gray">
                </TextView>
                <TextView
                    android:id="@+id/infoProfilMesafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/regMesafe">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/infoProfilSureYazi"
                    android:text="@string/regSure"
                    android:textSize="20sp"
                    android:textColor="@color/dark_slate_gray">
                </TextView>
                <TextView
                    android:id="@+id/infoProfilSure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/regSure">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/infoProfilKisiSayiYazi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regKisiSayisi"
                    android:textSize="20sp"
                    android:textColor="@color/dark_slate_gray">
                </TextView>
                <TextView
                    android:id="@+id/infoProfilKisiSayi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/regKisiSayisi">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            app:dividerColor="@color/light_slate_gray">
        </com.google.android.material.divider.MaterialDivider>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp">
            <TextView
                android:text="telefon"
                android:id="@+id/infoProfilTelefon"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"/>
            <TextView
                android:text="@string/prompt_email"
                android:id="@+id/infoProfilemail"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"/>
            <Button
                android:id="@+id/talepGonderButonu"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_marginTop="36dp"
                android:backgroundTint="@color/dark_slate_blue"
                android:text="@string/eslesmeTalepBtnYazi"
                android:textSize="20sp"
                android:textColor="@color/azure" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>